--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
-    <script type="text/javascript" th:src="@{/js/jquery-2.1.4.min.js}"></script>
-    <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
+    <th:block th:include="include :: header('首页')" />
 </head>
 <style>
     div{
