--- a/web/src/main/resources/templates/admin-list.html
+++ b/web/src/main/resources/templates/admin-list.html
@@ -58,24 +58,24 @@
                               <tbody th:each="user:${userList}" >
                                 <tr>
                                   <td>
-                                    <input type="checkbox" name=""  lay-skin="primary">
+                                    <input type="checkbox"  name=""  lay-skin="primary">
                                   </td>
-                                  <td th:text="${user.userId}" >1</td>
-                                  <td th:text="${user.loginName}" >admin</td>
-                                  <td>18925139194</td>
-                                  <td>113664000@qq.com</td>
-                                  <td th:text="${user.status}" >超级管理员</td>
+                                  <td th:text="${user.userId}" ></td>
+                                  <td th:text="${user.loginName}" ></td>
+                                  <td th:text="${user.phoneNumber}"></td>
+                                  <td th:text="${user.email}"></td>
+                                  <td th:text="${user.status}" ></td>
                                   <td>2017-01-01 11:11:42</td>
                                   <td class="td-status">
                                     <span class="layui-btn layui-btn-normal layui-btn-mini">已启用</span></td>
                                   <td class="td-manage" >
-                                    <a onclick="member_stop(this,'10001')" href="javascript:;"  title="启用">
+                                    <a th:name="${user.userId}" onclick="member_stop(this,'10001')" href="javascript:;"  title="启用">
                                       <i class="layui-icon">&#xe601;</i>
                                     </a>
-                                    <a title="编辑"  onclick="xadmin.open('编辑','admin-edit.html')" href="javascript:;">
+                                    <a title="编辑" th:name="${user.userId}"  onclick="xadmin.open('编辑','/adminEdit')" href="javascript:;">
                                       <i class="layui-icon">&#xe642;</i>
                                     </a>
-                                    <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;">
+                                    <a title="删除" th:name="${user.userId}" onclick="member_del(this)" href="javascript:;">
                                       <i class="layui-icon">&#xe640;</i>
                                     </a>
                                   </td>
@@ -141,11 +141,34 @@
       }
 
       /*用户-删除*/
-      function member_del(obj,id){
+      function member_del(obj){
           layer.confirm('确认要删除吗？',function(index){
+              console.log("id:"+obj.name);
               //发异步删除数据
-              $(obj).parents("tr").remove();
-              layer.msg('已删除!',{icon:1,time:1000});
+              $.ajax({
+                  url:'/adminDeleteOne',
+                  type:'post',
+                  dataType:'json',
+                  contentType: 'application/json',
+                  data: {
+                      "id":obj.name
+                  },
+                  success:function (rsp) {
+                      var code = rsp.code;
+
+                      if("200" == code){
+                          $(obj).parents("tr").remove();
+                          layer.msg('已删除!',{icon:1,time:1000});
+                      }else {
+                          layer.msg('删除失败!',{icon:1,time:1000});
+                      }
+                  },
+                  error:function (err) {
+                      layer.msg('删除失败!',{icon:1,time:1000});
+                  }
+              });
+
+
           });
       }
 
