增加分页部分功能 修改遗留bug

--- a/web/src/main/resources/templates/admin-add.html
+++ b/web/src/main/resources/templates/admin-add.html
@@ -117,7 +117,8 @@
                     var userData = {
                         loginName:$('#username').val(),
                         password:$('#L_pass').val(),
-                        phoneNumber:$('#phone').val()
+                        phoneNumber:$('#phone').val(),
+                        email:$('#L_email').val()
 //                        sex:$('#phone').val(),
 
 
