--- a/web/src/main/resources/templates/admin-list.html
+++ b/web/src/main/resources/templates/admin-list.html
@@ -110,7 +110,7 @@
 
                                     <!-- 尾页 -->
                                     <li>
-                                        <a th:href="'/adminListByPage?pageNum=' + ${userList.getTotalPage()}">尾页</a>
+                                        <a th:href="'/adminListByPage?pageNum=' + ${userList.getTotalPage() -1}">尾页</a>
                                     </li>
 
                                 </ul>
