--- a/web/src/main/resources/templates/admin-add.html
+++ b/web/src/main/resources/templates/admin-add.html
@@ -53,7 +53,7 @@
                       </div>-->
                       <div class="layui-input-block" >
                           <div th:each="role:${roleList}" style="float: left;">
-                          <input type="checkbox" name="roles" th:value="${role.roleId}" lay-skin="primary" th:title="${role.roleName}"  >
+                          <input type="checkbox" name="roles" th:value="${role}" lay-skin="primary" th:title="${role.roleName}"  >
                           </div>
                       </div>
                   </div>
@@ -108,14 +108,26 @@
                         }
                     }
                 });
-
+                function json2(c){
+                    var jsonData="";
+                    c=c.replace("{","").replace("}","");
+                    c=c.split(',');
+                    for(var i=0;i<c.length-1;i++){
+                        jsonData = jsonData + '"'+ (c[i].split('=')[0]).replace(/[\s]+/g,"").replace(/null/,"")+'":"' + (c[i].split('=')[1]).replace(/[\s]+/g,"").replace(/null/,"") + '",';
+                    }
+                    jsonData = jsonData.substring(0,jsonData.length-1);
+                    jsonData = "{" + jsonData + "}";
+                    console.log(jsonData);
+                    return JSON.parse(jsonData)
+                }
                 //监听提交
                 form.on('submit(add)',
                 function(data) {
                     // console.log(data);
                     var ids = [];
                     $("input[name='roles']:checked").each(function(i){
-                        ids.push($(this).val());
+                        var obj = json2($(this).val());
+                        ids.push(obj);
                     });
 
                     var userData = {
